# my-project

./: .deepsource.toml  package-lock.json  package.json
saleor-ecom/: SECURITY_SETUP.md  package.json  pyproject.toml
saleor-ecom/.devcontainer/: Dockerfile
saleor-ecom/saleor/: settings.py  urls.py
saleor-ecom/saleor/core/: apps.py  auth_password_validators.py  middleware.py  security_logging.py  security_monitoring.py  security_utils.py
saleor-ecom/saleor/dashboard/security/: urls.py  views.py
saleor-ecom/templates/dashboard/: base.html
saleor-ecom/templates/dashboard/security/: dashboard.html  modal.html
saleor-platform/: .env
saleor-storefront/: .env.example  .gitignore  .graphqlrc.ts  Dockerfile  SECURITY.md  docker-compose.yml  env-config.txt  next.config.js  package.json  pnpm-lock.yaml
saleor-storefront/__tests__/: STF_01.spec.ts  STF_03.spec.ts
saleor-storefront/src/app/: config.ts  globals.css  layout.tsx
saleor-storefront/src/app/[channel]/(main)/: layout.tsx  page.tsx
saleor-storefront/src/app/[channel]/(main)/cart/: page.tsx
saleor-storefront/src/app/[channel]/(main)/pages/[slug]/: page.tsx
saleor-storefront/src/app/[channel]/(main)/products/: page.tsx
saleor-storefront/src/app/[channel]/(main)/products/[slug]/: AddButton.tsx  page.tsx
saleor-storefront/src/app/[channel]/(main)/search/: page.tsx
saleor-storefront/src/app/api/checkout/[checkoutId]/lines/: route.ts
saleor-storefront/src/app/api/checkout/[checkoutId]/lines/[lineId]/: route.ts
saleor-storefront/src/app/api/checkout/create/: route.ts
saleor-storefront/src/app/api/checkout/lines/add/: route.ts
saleor-storefront/src/app/checkout/: layout.tsx  page.tsx  pageWrapper.tsx
saleor-storefront/src/checkout/: Root.tsx
saleor-storefront/src/checkout/assets/images/: BaxoqLogo.tsx
saleor-storefront/src/checkout/components/AddressForm/: useAddressFormUtils.ts
saleor-storefront/src/checkout/views/PageNotFound/: PageNotFound.tsx
saleor-storefront/src/lib/: checkout.ts  checkoutClient.ts  graphql.ts
saleor-storefront/src/lib/auth/: client.ts  index.ts  react.tsx  server.ts
saleor-storefront/src/ui/atoms/: BladeIcon.tsx  LinkWithChannel.tsx  Overlay.tsx
saleor-storefront/src/ui/components/: AddButton.tsx  AuthProvider.tsx  BannerCarousel.tsx  EnhancedFooter.tsx  Footer.tsx  Header.tsx  LoginForm.tsx  Logo.tsx  ProductElement.tsx  ProductList.tsx  VariantSelector.tsx
saleor-storefront/src/ui/components/nav/: Nav.tsx
saleor-storefront/src/ui/components/nav/components/: CartNavItem.tsx  CloseButton.tsx  EnhancedSearch.tsx  MobileMenu.tsx  NavLinks.tsx  OpenButton.tsx  useMobileMenu.ts
saleor-storefront/src/ui/components/nav/components/UserMenu/: UserMenuContainer.tsx
